--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,9 +11,9 @@
         android:id="@+id/image_player_choice"
         android:layout_width="125dp"
         android:layout_height="125dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/rules"
@@ -23,10 +23,10 @@
         android:id="@+id/image_bot_choice"
         android:layout_width="125dp"
         android:layout_height="125dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="4dp"
         android:rotationY="180"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.944"
+        app:layout_constraintHorizontal_bias="0.945"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/rules"
@@ -36,11 +36,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="serif"
         android:text="Камень-Ножницы-Бумага"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,27 +65,27 @@
         android:id="@+id/button_spock"
         android:layout_width="125dp"
         android:layout_height="50dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="4dp"
         android:onClick="playerMakesAChoice"
         android:text="СПОК"
         android:textSize="14sp"
         app:cornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_lizard"
+        app:layout_constraintTop_toBottomOf="@+id/button_scissors"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button_rock"
         android:layout_width="125dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="12dp"
         android:onClick="playerMakesAChoice"
         android:text="КАМЕНЬ"
         android:textSize="14sp"
         app:cornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_player_choice"
         tools:ignore="HardcodedText" />
@@ -99,57 +100,41 @@
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.944"
+        app:layout_constraintHorizontal_bias="0.945"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_scissors"
-        app:layout_constraintVertical_bias="0.066"
+        app:layout_constraintTop_toBottomOf="@+id/image_bot_choice"
+        app:layout_constraintVertical_bias="0.065"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button_paper"
         android:layout_width="125dp"
         android:layout_height="50dp"
+        android:layout_marginTop="12dp"
         android:onClick="playerMakesAChoice"
         android:text="БУМАГА"
         android:textSize="14sp"
         app:cornerRadius="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.341"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_rock"
-        app:layout_constraintVertical_bias="0.066"
+        app:layout_constraintTop_toBottomOf="@+id/image_player_choice"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button_scissors"
         android:layout_width="125dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="12dp"
         android:onClick="playerMakesAChoice"
         android:text="НОЖНИЦЫ"
         android:textSize="14sp"
         app:cornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.944"
+        app:layout_constraintHorizontal_bias="0.656"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_bot_choice"
         tools:ignore="HardcodedText" />
-
-    <TextView
-        android:id="@+id/drawResultText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:gravity="center"
-        android:text="Результат"
-        android:textSize="20sp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.73" />
 
     <TextView
         android:id="@+id/notDrawResultText"
@@ -162,6 +147,24 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.265" />
+
+    <TextView
+        android:id="@+id/drawResultText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="serif"
+        android:gravity="center"
+        android:text="Результат"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.265" />
 </androidx.constraintlayout.widget.ConstraintLayout>
