--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/image_player_choice"
+        android:id="@+id/imagePlayerChoice"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_marginTop="64dp"
@@ -20,7 +20,7 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/image_bot_choice"
+        android:id="@+id/imageBotChoice"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_marginTop="64dp"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_start_game"
+        android:id="@+id/buttonStart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -61,7 +61,7 @@
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button_spock"
+        android:id="@+id/buttonSpock"
         android:layout_width="125dp"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
@@ -71,11 +71,11 @@
         app:cornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_lizard"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLizard"
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button_rock"
+        android:id="@+id/buttonRock"
         android:layout_width="125dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
@@ -86,11 +86,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_player_choice"
+        app:layout_constraintTop_toBottomOf="@+id/imagePlayerChoice"
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button_lizard"
+        android:id="@+id/buttonLizard"
         android:layout_width="125dp"
         android:layout_height="50dp"
         android:onClick="playerMakesAChoice"
@@ -101,12 +101,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.944"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_scissors"
+        app:layout_constraintTop_toBottomOf="@+id/buttonScissors"
         app:layout_constraintVertical_bias="0.066"
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button_paper"
+        android:id="@+id/buttonPaper"
         android:layout_width="125dp"
         android:layout_height="50dp"
         android:onClick="playerMakesAChoice"
@@ -117,12 +117,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_rock"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRock"
         app:layout_constraintVertical_bias="0.066"
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/button_scissors"
+        android:id="@+id/buttonScissors"
         android:layout_width="125dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
@@ -133,7 +133,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.944"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_bot_choice"
+        app:layout_constraintTop_toBottomOf="@+id/imageBotChoice"
         tools:ignore="HardcodedText" />
 
     <TextView
